--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 
                     <li>
                         <a href="https://github.com/tech-reni" class="social-link">
-                            <ion-icon name="logo-instagram"></ion-icon>
+                            <ion-icon name="logo-github"></ion-icon>
                         </a>
                     </li>
 
