--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                     </li>
 
                     <li>
-                        <a href="#" class="navbar-link">About</a>
+                        <a href="#profile" class="navbar-link">About</a>
                     </li>
 
                     <li>
@@ -147,23 +147,25 @@
                         <a href="#" class="btn btn-outline contact-btn">Contact Me</a>
                     </div>
                 </div>
+                <br id="profile">
             </section>
 
             <!-- 
         - #ABOUT
       -->
-
             <section class="profile">
                 <div class="img-container">
-                    <img src="hero-slide-1.jpg" alt="">
+                    <img src="assets/images/hero-slide-1.jpg" alt="">
                 </div>
                 <br>
                 <h2 class="profile-name">Abraham TireniOluwa</h2>
                 <p>Programmer</p>
                 <br>
                 <p class="profile-writeup">
-                    A Programmer that have proficient skills in PHP, JavaScript, HTML and CSS. Which plays a nice role for a web developer as he is a detail-conscious developer.
+                    Proficient skills in PHP, JavaScript, HTML and CSS. Which plays a nice role for a web developer as he is a detail-conscious developer.
                 </p>
+                <br>
+                <a href="https://Instagram.com/tech-reni"><button class="btn">Follow Me</button></a>
             </section>
 
 
