--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
       -->
             <section class="profile">
                 <div class="img-container">
-                    <img src="assets/images/hero-slide-1.jpg" alt="">
+                    <img src="hero-slide-1.jpg" alt="">
                 </div>
                 <br>
                 <h2 class="profile-name">Abraham TireniOluwa</h2>
