--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                     Proficient skills in PHP, JavaScript, HTML and CSS. Which plays a nice role for a web developer as he is a detail-conscious developer.
                 </p>
                 <br>
-                <a href="https://Instagram.com/tech-reni"><button class="btn">Follow Me</button></a>
+                <a href="https://www.instagram.com/tech_reni"><button class="btn">Follow Me</button></a>
             </section>
 
 
